# tgai-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  bot_check.py  check_dis.py  check_print.py  docker-compose.yml  final_run.sh  full_verify.sh  pyproject.toml  requirements.txt  run_all_tests.sh  run_bot.py  run_tests.sh  start_bot.sh  start_once.sh  verify_fixes.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/tgai_agent/: __init__.py  __main__.py  config.py  main.py
src/tgai_agent/agent_manager/: agent.py  manager.py
src/tgai_agent/agent_manager/roles/: presets.py
src/tgai_agent/ai_core/: base_provider.py  router.py
src/tgai_agent/ai_core/memory/: long_term.py  short_term.py
src/tgai_agent/ai_core/providers/: claude_provider.py  gemini_provider.py  openai_provider.py
src/tgai_agent/bot_interface/: bot.py
src/tgai_agent/bot_interface/commands/: agents_cmd.py  config_cmd.py  start.py  tasks_cmd.py
src/tgai_agent/bot_interface/handlers/: callback_handler.py  message_handler.py
src/tgai_agent/bot_interface/menus/: keyboards.py
src/tgai_agent/plugins/: base_plugin.py  registry.py
src/tgai_agent/plugins/builtin/: __init__.py  code_runner.py  summarizer.py  web_search.py
src/tgai_agent/security/: permissions.py  rate_guard.py
src/tgai_agent/storage/: database.py  encryption.py
src/tgai_agent/storage/repositories/: agent_repo.py  chat_repo.py  task_repo.py  user_repo.py
src/tgai_agent/task_scheduler/: executor.py  job.py  scheduler.py
src/tgai_agent/user_client/: client.py  event_listeners.py  rate_limiter.py
src/tgai_agent/utils/: helpers.py  logger.py  retry.py
tests/: conftest.py
tests/unit/: conftest.py
tests/unit/test_agent/: test_agent.py  test_presets.py
tests/unit/test_ai_core/: __init__.py  test_base_provider.py  test_memory.py  test_providers.py  test_router.py
tests/unit/test_bot/: test_message_handler.py
tests/unit/test_plugins/: __init__.py  test_code_runner.py  test_registry.py  test_web_search.py
tests/unit/test_security/: test_encryption.py  test_permissions.py  test_rate_guard.py
tests/unit/test_storage/: test_encryption_roundtrip.py  test_helpers.py  test_repositories.py  test_task_scheduler.py
tests/unit/test_utils/: __init__.py  test_helpers_extended.py
